--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -31,6 +31,39 @@
 
     #submit{font-family: 'Shadows Into Light', cursive;}
     select{ width: 190px; font-family: 'Shadows Into Light', cursive;}
+    .red-text{ color:red;}
+     /* Add animation to the disney text. */
+
+     #matchName {
+        animation: text1 0.5s infinite;
+    }
+
+    @keyframes text1 {
+        0% {
+            color: white;
+        }
+        20% {
+            color: #FF0000;
+        }
+        40% {
+            color: #FF3444;
+        }
+        60% {
+            color: #FA4446;
+        }
+        80% {
+            color: #FF4577;
+        }
+        100% {
+            color: grey;
+        }
+    }
+    #groot{
+     
+    }
+    .groot{ 
+      clear: both;}
+   
   </style>
 </head>
 
@@ -38,9 +71,12 @@
   <div class="main container">
     <h1 class="text-center ">SUPER HERO COMPATIBILITY TEST</h1>
 
-    <h2 class="text-center text-muted">FIND OUT WHAT HERO YOU ARE MOST LIKE</h2>
+    <h2 class="text-center red-text text-muted">FIND OUT WHAT HERO YOU ARE MOST LIKE</h2>
     <br>
 
+    <div class="groot">
+      <img id="groot" src="https://cache.popcultcha.com.au/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/g/o/gotg2-awesome-groot-premium-motion-statue-.png" alt="groot" width="20%">
+      </div>
     <h3>About You</h3>
     <br>
     <h4 class="lead">NAME (required)</h4>
@@ -171,7 +207,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h2 class="modal-title text-center">YOUR MATCH IS</h2> 
+          <h2 class=" text-center">YOUR MATCH IS</h2> 
           
         </div>
         <div class="modal-body">
