--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,6 +16,8 @@
   <title>SUPER HERO COMPATIBILITY TEST</title>
   <style>
 
+    /* body{ background-image: url('https://i.pinimg.com/originals/4f/b0/a1/4fb0a11dd4df7f24a5c159ae49d119a3.jpg'); background-size: 30%} */
+
     .jumbotron{position: relative;}
     .input {max-width: 50%;}
 
@@ -49,6 +51,7 @@
    #spider{
      float:right;
     animation: animation1 3.5s infinite;
+    
 }
 
 @keyframes animation1{
