--- a/app/public/comeagain.html
+++ b/app/public/comeagain.html
@@ -19,8 +19,9 @@
 
     p{font-size: 20px; font-family: 'Shadows Into Light', cursive;}
 
-    .gif{margin-left: 24%; }
+    .gif{margin-left: 24%; margin-top: 4%;}
 
+    #footP{ margin-top: 7%;}
      .color{animation: text1 0.5s infinite;}
     @keyframes text1 {
         0% { color: white;}
