--- a/app/public/comeagain.html
+++ b/app/public/comeagain.html
@@ -14,11 +14,11 @@
   <title>SUPER HERO COMPATIBILITY TEST</title>
   <style>
    
-   
+   /* Set font family and font size. */
     h1{font-size: 85px; font-family: 'Bangers', cursive;}
 
     p{font-size: 20px; font-family: 'Shadows Into Light', cursive;}
-
+    /* Gif. */
     .gif{margin-left: 24%; margin-top: 4%;}
 
     #footP{ margin-top: 7%;}
@@ -36,10 +36,10 @@
   </style>
 </head>
 <body>
-    
+    <!-- Main container. -->
     <div class="jumbotron container">
         <h1 class="text-center color">ERROR : SPIDER SENSES DOWN</h1>
-       
+       <!-- Gif. -->
      <img class="gif" src="https://68.media.tumblr.com/bd3ff2a4ab26084e161c1a84cc64d8d3/tumblr_inline_ov8xrq6FTc1v3701z_540.gif" alt="spiderman" id="footerPic" >
     </div>
       <p class="text-center" id="footP"> &copy COPYRIGHT 2017 J A S O N + N A V A R R O <br><a  class="text-center" href="/api/heros">All Hero's API</a> | <a href="https://github.com/Jasonnavarro86/Super-Hero-Compatibility-Test">GitHub Repo</a> </p> 
