--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -54,16 +54,16 @@
    .captain{position: absolute; right:2.5%; top:18.9%} 
 
     /* Hammer img. */
-   #hammer{position: absolute; top: 118%; right:21%;}
+   #hammer{position: absolute; top: 100%; right:19%;}
 
     /* Marvel Logo img. */
    #logo{position: absolute; top: 40%; right:35%;}
 
     /* Deadpool img. */
-   #deadpool{position: absolute; right:0; bottom:-0; z-index: 500} 
+   #deadpool{position: absolute; right:25%; bottom:-0; z-index: 500} 
 
     /* Iornman img and animation. */
-   #iornMan{ float:right; animation: animation1 3.5s infinite;}
+   #iornMan{ float:right; animation: animation1 2.5s infinite;}
 
   @keyframes animation1{
     0%{ transform: translateX(-540px) translateY(70%)}
