--- a/app/public/home.html
+++ b/app/public/home.html
@@ -67,7 +67,7 @@
       </div>
 
       <!-- Spider img. -->
-      <img id="spider" src="https://i.pinimg.com/736x/3b/92/3a/3b923a7d216cc6e2335a59962b093446--halloween-stencils-halloween-clipart.jpg" alt="spider" width="7%">
+      <img id="spider" src="http://www.pngmart.com/files/1/Hanging-Spider.png" alt="spider" width="7%">
       <!-- Spider Man img. -->
       <img class="" src="https://orig00.deviantart.net/9550/f/2017/179/1/b/spider_man__homecoming_png_29_by_sidewinder16-dbeeqku.png" alt="spiderman" id="footerPic" width="15%">
       
