Added responsive font-size to main h1 and h2

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -39,7 +39,14 @@
    #spider{position: fixed; right:-0px; top:0;
      animation: animation1 6.5s infinite;
      opacity: 0.9;}
-
+     @media only screen and (max-width: 768px) {
+ #title{
+   font-size: 50px !important;
+ }
+#secText{
+  font-size: 25px !important;
+}
+    }
   @keyframes animation1{
      0%{ transform: translateY(-350px)}
      25%{ transform: translateY(-5px)}
